--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@ img {
 </style>
 </head>
 <body>
-<img src="qcamlik-coming-soon.jpg" alt="Q Çamlık Çok Yakında">
+<img src="qcamlik-coming-soon.jpeg" alt="Q Çamlık Çok Yakında">
 </body>
 </html>
